Changed color issue on mobile wallet

--- a/html/css_2/moncrypt.webflow.css
+++ b/html/css_2/moncrypt.webflow.css
@@ -1586,8 +1586,8 @@ background-color:transparent;
     color: white;
   }
   .menu-btn.w--open {
-    background-color: #37414f;
-    color: #549eff;
+    background-color: #072138;
+    color: #8af1f0;
   }
   .review-details-modal {
     display: none;
@@ -1667,7 +1667,7 @@ background-color:transparent;
     border: 1px solid #8AF1F0;
   }
   .nav-menu {
-    background-color: #37414f;
+    background-color: #072138;
   }
   .body-section {
     padding-top: 20px;
@@ -1857,8 +1857,8 @@ background-color:transparent;
     color: white;
   }
   .menu-btn.w--open {
-    background-color: #37414f;
-    color: #5093eb;
+    background-color: #072138;
+    color: #8af1f0;
   }
   .review-details-div {
     margin-right: 0px;
