Updated frontent part 1

--- a/html/partials/home.html
+++ b/html/partials/home.html
@@ -20,12 +20,12 @@ html {
   <div class="body-section steps-page">
     <div class="header-section">
       <div class="w-container home-container">
-        <div class="home-header">X-CASH Web Wallet</div>
+        <div class="home-header"><img src="./images/xcash-webwallet.png" alt="xcash-webwallet"></div>
         <div class="home-subhead">Welcome to X-CASH web wallet</div>
         <a class="create-account-btn" href="#!/create-your-account">Create an Account</a>
         <div class="home-subhead" style="font-size:12px" ng-show="nettype == 0">
           <br/>
-          This is <span style="color: red; font-weight: bold">development</span> version on mainnet.
+          This is a <span style="color: red; font-weight: bold">development</span> version on the mainnet.
           Don't use unless you know what you are doing.
         </div>
         <div class="home-subhead" style="font-size:10px">
