--- a/html/css/screen.css
+++ b/html/css/screen.css
@@ -433,7 +433,7 @@ table {
   margin-left: 80px;
   padding: 10px 40px 25px;
   border-radius: 2px;
-  background-color: #011F37;
+  background-color: #ece9ea;
 }
 
 /* line 18, ../sass/screen.scss */
