--- a/html/css_2/normalize.css
+++ b/html/css_2/normalize.css
@@ -73,7 +73,7 @@ body {
  */
 a {
   background: transparent;
-    color:#8AF1F0;
+    color:#f37422;
 }
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
