--- a/html/partials/create-your-account.html
+++ b/html/partials/create-your-account.html
@@ -10,13 +10,13 @@
 <div>
   <div class="w-container create-account-container">
     <div class="no-account-div top-box">
-      <div class="info-header middle">Take Note of your Private Login Key!</div>
+      <div class="info-header middle">Take Note of your Mnemonic Seed!</div>
       <div class="no-account-text thin middle">
-	Below this you will find your twenty five word "Private Login Key". Keeping this secure and private is very important, as it is
-	the only way that you will be able to login to your account. As we don't store your private login key on the server
-	there is no way to recover it if it is lost!<br><br>Your private login key can also never be changed, and if it is stolen or otherwise
-	compromised, you will have to move your funds to a new account with a new private login key. Therefore, it is best that you
-	backup your private login key by writing it down, perhaps obscuring it as part of a poem or letter, and storing it in multiple
+	Below this you will find your twenty five word "Mnemonic Seed". Keeping this secure and private is very important, as it is
+	the only way that you will be able to login to your wallet or restore it in one of our X-CASH Wallets. <br><strong>As we don't store your private login key on the server,
+	there is no way to recover it if it is lost!</strong><br><br>Your private login key can also never be changed, and if it is stolen or otherwise
+	compromised, you will have to move your funds to a new account with a new mnemonic seed. Therefore, it is best that you
+	backup your mnemonic seed by writing it down, perhaps obscuring it as part of a poem or letter, and storing it in multiple
 	safe and secure places.
       </div>
     </div>
